# phingc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default_buildfile.c  default_buildfile.h  get_buildfile.c  get_buildfile.h  handle_arguments.c  handle_arguments.h  is_buildfile_valid.c  is_buildfile_valid.h  is_debug_enabled.c  is_debug_enabled.h  main.c  output_styles.c  output_styles.h  phingc_target.c  phingc_target.h  print_argument_debug.c  print_argument_debug.h  print_buildfile.c  print_buildfile.h  print_help.c  print_help.h  print_target_list.c  print_target_list.h  version.h
example-buildfiles/: .gitignore  hello-world.xml  simple.xml
targets/: get_default_target.c  get_default_target.h  get_max_target_name_length.c  get_max_target_name_length.h  get_targets.c  get_targets.h  phingc_target.h  print_target.c  print_target.h  print_target_list.c  print_target_list.h  print_targets.c  print_targets.h  run_default_target.c  run_default_target.h
